force-app/main/default/objects/Site_Visit__c/fields/One_Word_Reason__c.field-meta.xml
<CustomField>
    <fullName>One_Word_Reason__c</fullName>
    <label>One Word Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>80Ib Issue</fullName>
            </value>
            <value>
                <fullName>Already Booked Client</fullName>
            </value>
            <value>
                <fullName>Asking More Discount</fullName>
            </value>
            <value>
                <fullName>At Negotiation Stage</fullName>
            </value>
            <value>
                <fullName>Awaiting Funds</fullName>
            </value>
            <value>
                <fullName>Balcony Needed</fullName>
            </value>
            <value>
                <fullName>Bigger Carpet Area Required</fullName>
            </value>
            <value>
                <fullName>Booked with Resale / Competitor</fullName>
            </value>
            <value>
                <fullName>Budget Constraint</fullName>
            </value>
            <value>
                <fullName>Builder Subvention</fullName>
            </value>
            <value>
                <fullName>Business Loss / Job Loss Due To Covid</fullName>
            </value>
            <value>
                <fullName>Call Back After 1 Month</fullName>
            </value>
            <value>
                <fullName>Call Back After 2 Months</fullName>
            </value>
            <value>
                <fullName>Call Back After 3 To 6 Months</fullName>
            </value>
            <value>
                <fullName>Channel Partner / Competitor / Want Barter Deal</fullName>
            </value>
            <value>
                <fullName>CSOP</fullName>
            </value>
            <value>
                <fullName>Decision Maker Absent</fullName>
            </value>
            <value>
                <fullName>Deviation In Payment Schedule</fullName>
            </value>
            <value>
                <fullName>Different Payment Plan Required</fullName>
            </value>
            <value>
                <fullName>Discusssion With Family</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Family Issues</fullName>
            </value>
            <value>
                <fullName>Floor Issue / Unit Issue</fullName>
            </value>
            <value>
                <fullName>General Enquiry</fullName>
            </value>
            <value>
                <fullName>Layout Issue / Room Sizes Issue</fullName>
            </value>
            <value>
                <fullName>Litigation Issue / Status Quo</fullName>
            </value>
            <value>
                <fullName>Loan Eligibilty Issue / Loan Not Yet Sanctioned</fullName>
            </value>
            <value>
                <fullName>Location Issue / Nalla Issue</fullName>
            </value>
            <value>
                <fullName>No Intention To Buy / Purchase Plan Postponed</fullName>
            </value>
            <value>
                <fullName>Not Contactable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>