force-app/main/default/objects/Site_Visit__c/fields/Opportunity_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Project_Name__c</fullName>
    <formula>Opportunity__r.Project__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Project Name</label>
    <type>Text</type>
</CustomField>