force-app/main/default/objects/Site_Visit__c/fields/Require_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Require_Feedback__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Require Feedback</label>
    <type>Checkbox</type>
</CustomField>