force-app/main/default/objects/Site_Visit__c/fields/Sale_Rep_Checkout_Time__c.field-meta.xml
<CustomField>
    <fullName>Sale_Rep_Checkout_Time__c</fullName>
    <label>Sale Rep Checkout Time</label>
    <type>DateTime</type>
</CustomField>