force-app/main/default/objects/Site_Visit__c/fields/Sales_Rep_Assign_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Assign_Date_Time__c</fullName>
    <label>Sales Rep Assign Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>