force-app/main/default/objects/Site_Visit__c/fields/SalesRep_Check_InTime__c.field-meta.xml
<CustomField>
    <fullName>SalesRep_Check_InTime__c</fullName>
    <label>SalesRep Check InTime</label>
    <type>DateTime</type>
</CustomField>