force-app/main/default/objects/Site_Visit__c/fields/SMS_Scheduled_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>SMS_Scheduled_Date_and_Time__c</fullName>
    <label>SMS Scheduled Date and Time</label>
    <type>DateTime</type>
</CustomField>