force-app/main/default/objects/Site_Visit__c/fields/Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>Sub_Region__c</fullName>
    <label>Sub Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Locality__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Altamount Road</fullName>
            </value>
            <value>
                <fullName>Andheri(E)</fullName>
            </value>
            <value>
                <fullName>Andheri(W)</fullName>
            </value>
            <value>
                <fullName>Andheri Kurla Road</fullName>
            </value>
            <value>
                <fullName>Azad Nagar</fullName>
            </value>
            <value>
                <fullName>Balkum</fullName>
            </value>
            <value>
                <fullName>Bandra(E)</fullName>
            </value>
            <value>
                <fullName>Bandra(W)</fullName>
            </value>
            <value>
                <fullName>Bandra Kurla Complex</fullName>
            </value>
            <value>
                <fullName>Borivali(E)</fullName>
            </value>
            <value>
                <fullName>Borivali(W)</fullName>
            </value>
            <value>
                <fullName>Byculla</fullName>
            </value>
            <value>
                <fullName>Chandivali</fullName>
            </value>
            <value>
                <fullName>Charni Road</fullName>
            </value>
            <value>
                <fullName>Chembur</fullName>
            </value>
            <value>
                <fullName>Chinchpokli (E)</fullName>
            </value>
            <value>
                <fullName>Colaba</fullName>
            </value>
            <value>
                <fullName>Cuffe Parade</fullName>
            </value>
            <value>
                <fullName>Dadar(E)</fullName>
            </value>
            <value>
                <fullName>Dadar(W)</fullName>
            </value>
            <value>
                <fullName>Dahisar(E)</fullName>
            </value>
            <value>
                <fullName>Dahisar(W)</fullName>
            </value>
            <value>
                <fullName>Dhokali</fullName>
            </value>
            <value>
                <fullName>Eastern Exp. Hwy.</fullName>
            </value>
            <value>
                <fullName>Fort</fullName>
            </value>
            <value>
                <fullName>Ghatkopar(E)</fullName>
            </value>
            <value>
                <fullName>Ghatkopar(W)</fullName>
            </value>
            <value>
                <fullName>Ghodbunder Road</fullName>
            </value>
            <value>
                <fullName>Goregaon(E)</fullName>
            </value>
            <value>
                <fullName>Goregaon(W)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>