force-app/main/default/objects/Site_Visit__c/fields/Typology_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Typology_Discussed__c</fullName>
    <label>Typology Discussed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 BHK</fullName>
            </value>
            <value>
                <fullName>4 BHK</fullName>
            </value>
            <value>
                <fullName>Eden</fullName>
            </value>
            <value>
                <fullName>Eden Jodi</fullName>
            </value>
            <value>
                <fullName>Haven</fullName>
            </value>
            <value>
                <fullName>Haven Jodi</fullName>
            </value>
            <value>
                <fullName>Haven with Balcony</fullName>
            </value>
            <value>
                <fullName>Nest</fullName>
            </value>
            <value>
                <fullName>Nest &amp; Haven Jodi</fullName>
            </value>
            <value>
                <fullName>Nest Jodi</fullName>
            </value>
            <value>
                <fullName>UNO</fullName>
            </value>
            <value>
                <fullName>UNO Jodi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>