force-app/main/default/objects/Site_Visit__c/validationRules/Cannot_Edit_SV.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_SV</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    PRIORVALUE( Sales_Rep_Submit__c ) != FALSE,
    !CONTAINS($Profile.Name, &apos;Admin&apos;),
    PRIORVALUE( Feedback_SMS_Scheduled__c ) != FALSE
)</errorConditionFormula>
    <errorMessage>You cannot edit the Site Visit record.</errorMessage>
</ValidationRule>