force-app/main/default/objects/Site_Visit__c/validationRules/Next_Follow_Up_Date_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Next_Follow_Up_Date_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR( ISPICKVAL( Visit_Rating__c, &apos;Hot&apos;),
ISPICKVAL( Visit_Rating__c, &apos;Warm&apos;),
ISPICKVAL( Visit_Rating__c, &apos;Cold&apos;)
),
ISBLANK( Next_Follow_Up_Date__c )
)</errorConditionFormula>
    <errorDisplayField>Next_Follow_Up_Date__c</errorDisplayField>
    <errorMessage>Please Fill Next Follow-Up Date.</errorMessage>
</ValidationRule>