force-app/main/default/objects/Site_Visit__c/validationRules/Reason_For_Lost_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_For_Lost_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Visit_Rating__c, &apos;Lost&apos;),
ISPICKVAL( Reason_for_Lost__c, &apos;&apos;)
)</errorConditionFormula>
    <errorDisplayField>Reason_for_Lost__c</errorDisplayField>
    <errorMessage>Please Fill Reason For Lost.</errorMessage>
</ValidationRule>