force-app/main/default/objects/Site_Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Channel_Partner__c</columns>
    <columns>Mobile_Number__c</columns>
    <columns>Project__c</columns>
    <columns>Visit_Rating__c</columns>
    <columns>Visit_Type__c</columns>
    <columns>Typology_Discussed__c</columns>
    <columns>ESVF_Date_Time__c</columns>
    <columns>Next_Follow_Up_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>